# 1bit-sdl2-playground

./: .gitmodules  CMakeLists.txt  readme.md
res/config/: input.ini
res/maps/: Level1Map.hpp  level1.tmx
res/scenes/: level1.toml
res/sprites/: player.sprite
res/tilesets/: ground.tileset
src/components/: action_intent.hpp  behavior.hpp  blackboard.hpp  camera.hpp  collider.hpp  intent.hpp  movement.hpp  player_control.hpp  rigidbody.hpp  sprite.hpp  statemachine.hpp  tag.hpp  tilemap.hpp  transform.hpp
src/components/statemachine/: statemachine.hpp  transition.hpp  transition_condition.hpp
src/core/: blackboard_keys.hpp  context.hpp  engine.cpp  engine.hpp  entt_helpers.hpp  input_manager.cpp  input_manager.hpp  main.cpp  math_types.hpp  scene.hpp  scene_context.hpp  scene_loader.hpp  scene_manager.cpp  scene_manager.hpp  system_manager.cpp  system_manager.hpp  tilemap_loader.hpp
src/core/behaviors/: collectible_behavior.cpp  collectible_behavior.hpp  icollision_responder.hpp
src/core/descriptors/map/: MapDescriptor_Foundations.hpp  MapDescriptor_Layers.hpp  MapDescriptor_Tileset.hpp  TMX.hpp
src/core/descriptors/scene/: scene_descriptor.hpp
src/core/fsm/: istate.hpp  simple_animation_state.hpp
src/core/systems/: isystem.hpp
src/events/: collision.hpp
src/scenes/: game_scene.cpp  game_scene.hpp
src/scenes/definitions/: level1.hpp
src/systems/: animation.cpp  animation.hpp  animation_state_system.cpp  animation_state_system.hpp  behavior_system.cpp  behavior_system.hpp  camera_system.cpp  camera_system.hpp  character_controller_system.cpp  character_controller_system.hpp  character_controller_systemm.cpp  collision_system.cpp  collision_system.hpp  debug_info_system.cpp  debug_info_system.hpp  debug_render_system.cpp  debug_render_system.hpp  gameplay_system.cpp  gameplay_system.hpp  movement.cpp  movement.hpp  physics_system.cpp  physics_system.hpp  player_control.cpp  player_control.hpp  player_intent_system.cpp  player_intent_system.hpp  renderer.cpp  renderer.hpp  statemachine_system.cpp  statemachine_system.hpp  tilemap_render_system.cpp  tilemap_render_system.hpp  top_down_kinematic_movement_system.cpp  top_down_kinematic_movement_system.hpp  top_down_movement_system.cpp  top_down_movement_system.hpp
src/util/: code_map_loader.cpp  code_map_loader.hpp  code_scene_loader.cpp  code_scene_loader.hpp  hardcoded_map_loader.cpp  hardcoded_map_loader.hpp  hardcoded_scene_loader.cpp  hardcoded_scene_loader.hpp  input_config_loader.cpp  input_config_loader.hpp  quadtree.hpp  resource_manager.cpp  resource_manager.hpp  sprite_asset.hpp  sprite_asset_loader.cpp  sprite_asset_loader.hpp  text_asset_parser.cpp  text_asset_parser.hpp  texture_loader.cpp  texture_loader.hpp  tileset_asset.hpp  tileset_asset_loader.cpp  tileset_asset_loader.hpp  tmx_loader.cpp  tmx_loader.hpp  toml_scene_loader.cpp  toml_scene_loader.hpp
